<resources>
    <string name="app_name">SugarMe</string>
    <string name="cadastro">Cadastro</string>
    <string name="nome">Nome:</string>
    <string name="idade">Idade:</string>
    <string name="telefone">Telefone:</string>
    <string name="dtNascimento">Data de Nascimento:</string>
    <string name="cpf">CPF:</string>
    <string name="crm">CRM:</string>
    <string name="paciente">Paciente</string>
    <string name="medico">Medico</string>
    <string name="cadastrar">Cadastrar</string>
    <string name="dadosIncorretos">Por favor, preencha os dados corretamente</string>
    <string name="inseridoSucesso">Dados salvos com sucesso!</string>
    <string name="logout">Logout</string>
    <string name="especialidade">Especialidade</string>
    <string name="editar">Editar</string>
    <string name="excluir">Excluir</string>
    <string name="dataInvalida">Data inválida!</string>
    <string name="confirmarExclusao">Confirmar Exclusão?</string>
    <string name="sim">Sim</string>
    <string name="nao">Nao</string>
    <string name="tituloExclusao">Exclusao</string>
    <string name="edicaoPaciente">Edição Paciente</string>
    <string name="edicaoMedico">Edição Médico</string>
    <string name="salvar">Salvar</string>
    <string name="selecioneRadio">Selecione o tipo de usuário!</string>
    <string name="telefoneInvalido">Telefone inválido!</string>
    <string name="cpfInvalido">CPF inválido!</string>
    <string name="crmInvalido">CRM inválido!</string>
    <string name="especialidadeInvalida">Especialidade inválida!</string>
    <string name="nomeInvalido">Nome inválido!</string>
</resources>
